Volvi a una tipografia menos controvercial

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body {
     color:brown;
     text-align: center;
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #cabecera {
     background: #33A;
