--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,19 +1,42 @@
 body {
+    background-attachment: fixed;
+    background: #37488b;
     color: #33A;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
 #cabecera {
-    background: #33A;
+    background: url("../Imagenes/dragon.png") no-repeat center center;
     box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.75);
-    color: white;
+    color: black;
     font-weight: bold;
     margin: 0;
-    padding: 0.5rem;
+    padding: 0.5em 0 0.5em 2em;
+}
+
+#cabecera #logo {
+width: 20px;
+vertical-align: middle;
 }
 
 #cabecera #tagline {
     margin: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
+}
+
+#container {
+    width: 70%;
+    padding: 0;
+}
+
+#container h1 {
+    font-size: 20px;
+}
+#post {
+    background: white;
+    padding: 1em;
 }
