--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body {
     background-attachment: fixed;
-    background: #37488b;
+    background: #210fde;
     color: #33A;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -42,7 +42,7 @@ vertical-align: middle;
 }
 
 #footer {
-    background: #777;
+    background: #210fde;
     color: white;
     text-align: center;
     padding: 0.5em;
